MPD_sima v0.15.0

 * Remove EchoNest support (Closes #10)
 * Enhanced queuing behavior in random mode (Closes #16)
 * Add option to prevent single & repeat mode to disable queuing (Closes #19)
 * Honor MPC password/host format on command line option 'host'

-- kaliko jack <kaliko@azylum.org> UNRELEASED

MPD_sima v0.14.4

 * Fixed blacklisting for Random plugin (Closes #14)
 * Fixed sensible flavour of random plugin, thanks dnmx (Closes #15)

-- kaliko jack <kaliko@azylum.org> Thu, 24 Aug 2017 11:46:14 +0200


MPD_sima v0.14.3

 * This release in only intended to get rid of 0.14.2 source tarball.
   Source tar ball for v0.14.2 was badly generated. Release 0.14.2 and 0.14.3
   are actually the same source code, only generated tar were affected.
   Sorry for the inconvenience.

-- kaliko jack <kaliko@azylum.org> Sun, 12 Feb 2017 15:49:03 +0100


MPD_sima v0.14.2

 * Fixed MPD client cache (filters empty strings)
 * Fixed Track object to work with MPD >= 0.20 (Closes #12)
 * Fixed python virtualenv installer

-- kaliko jack <kaliko@azylum.org> Sat, 11 Feb 2017 13:04:27 +0100


MPD_sima v0.14.1

 * Prevent adding empty track to history (Closes #5)
 * Fixed false warning about wrong MBID format (Closes #6)

-- kaliko jack <kaliko@azylum.org> Sat, 02 Jan 2016 16:03:39 +0100


MPD_sima v0.14.0

 * Add option to generate config on stdout
 * Add priority feature for plugins
 * More robust MPD client
 * Fixed top track mode
 * Fixed default conf file name (back to mpd_sima.cfg)
 * Fixed http cache for lastFM
 * Cleanup code (removed users similarities)
 * Make "var-dir" option default name instead of "var_dir"
 * Honor HTTP_PROXY env. var. (need requests >2.4.0)

-- kaliko jack <kaliko@azylum.org> Sat, 17 Oct 2015 10:48:41 +0200


MPD_sima v0.13.0

 * Use of MusicBrainzIdentifier by default
   Please consider tagging your library with these metadata
 * New virtualenv installer in pure python

-- kaliko jack <kaliko@azylum.org>  Wed, 28 Jan 2015 12:20:49 +0100

